fix weird "jumping" bug on headerbars of gnome-monitor\gnome-clocks\others

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -2170,7 +2170,7 @@ GtkColorButton.button {
  * header-bar *
  **************/
 .header-bar {
-    padding: 4px;
+    padding: 5px;
     border-width: 0 0 1px 0;
     border-radius: 0;
     border-style: solid;
@@ -2181,11 +2181,11 @@ GtkColorButton.button {
 }
 
 .header-bar .button.text-button {
-    padding: 4px;
+    padding: 4px 9px;
 }
 
 .header-bar .button.image-button {
-    padding: 6px;
+    padding: 3px 6px 3px 6px;
 }
 
 .header-bar .title {
@@ -2926,6 +2926,9 @@ GtkColorButton.button {
     border-radius: 0;
     border-right-width: 0;
     border-left-width: 0;
+
+    padding-bottom: 4px;
+    padding-top: 4px;
 }
 
 /* leftmost button */
@@ -2943,6 +2946,9 @@ GtkColorButton.button {
     border-right-width: 0;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
+
+    padding-bottom: 4px;
+    padding-top: 4px;
 }
 
 /* rightmost button */
@@ -2960,6 +2966,9 @@ GtkColorButton.button {
     border-left-width: 0;
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
+
+    padding-bottom: 4px;
+    padding-top: 4px;
 }
 
 /* linked single button */
@@ -2974,6 +2983,9 @@ GtkColorButton.button {
 .header-bar .linked .button:insensitive:only-child {
     border-width: 1px;
     border-radius: 0;
+
+    padding-bottom: 4px;
+    padding-top: 4px;
 }
 
 /***********
